--- a/app/ui/downArrow/downArrow.module.css
+++ b/app/ui/downArrow/downArrow.module.css
@@ -4,7 +4,7 @@
     display: inline-block;
     padding: 3px;
     margin-left: 1px;
-    margin-bottom: 1px;
+    margin-bottom: 2px;
     transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
 }
