--- a/app/ui/header/header.module.css
+++ b/app/ui/header/header.module.css
@@ -30,7 +30,7 @@
     grid-column: 5 / 6;
     display: flex;
     flex-direction: row;
-    align-items: flex-end;
+    justify-self: flex-end;
 }
 
 .signup {
@@ -49,6 +49,7 @@
     min-width: 80px;
     max-width: 100px;
     margin-left: 10px;
+    margin-right: 40px;
 }
 
 .hoverunderline {
